--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Raleway&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,15 +10,36 @@ body,
 html {
   font-size: 16px;
   text-align: center;
+  font-family: Raleway, sans-serif;
+  background-image: linear-gradient(
+    45deg,
+    #ff9a9e 0%,
+    #fad0c4 99%,
+    #fad0c4 100%
+  );
 }
 
 header {
-  margin-top: 50px;
+  padding: 2rem;
+}
+header > p {
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+header > p:hover {
+  font-size: 110%;
+}
+
+h1 {
+  font-family: 'Indie Flower', cursive;
+
+  font-size: 1.5rem;
 }
 .planner {
   width: 1024px;
   margin: auto;
-  margin-top: 100px;
+  margin-bottom: 100px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(auto, 150px);
@@ -32,6 +55,10 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+input {
+  background-color: transparent;
+  border: solid 0.2px teal;
 }
 
 div {
