--- a/style.css
+++ b/style.css
@@ -82,23 +82,26 @@ h1 {
 }
 input {
   background-color: transparent;
-  border: solid 0.2px teal;
+  border: none;
 }
 
-.planner div {
-  border: solid 0.2px teal;
+.planner div,
+input {
+  border: solid 0.1px black;
 }
 
 #totalDisplay {
   padding: 2rem;
-  border: 2px solid red;
-  width: 350px;
+  font-size: 1.5rem;
+  width: 450px;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
-#totalDisplay p {
+#totalDisplay div {
   width: 50%;
+  text-align: right;
 }
 
 #totalDisplay > hr {
