--- a/style.css
+++ b/style.css
@@ -110,11 +110,6 @@ input {
   margin: auto;
 }
 
-
-
-/* testing
-*/
-
 form {
   width: 100px;
   margin: auto;
@@ -126,8 +121,33 @@ form > label {
   padding: 5px;
 }
 
-#cardPick
-{
-  padding: 2rem;
-  margin: auto;
+/* Card flip styling */
+#flipCardContainer {
+  position: relative;
+  z-index: 1;
+  perspective: 1000;
+}
+
+#flipCard {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 1s linear;
+}
+
+.flip {
+  transform: rotateY(180deg);
+}
+
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.face.back {
+  display: block;
+  transform: rotateY(180deg);
+  box-sizing: border-box;
 }
